# Gittyup

./: AGENTS.md  CMakeLists.txt  FutureImprovement.md
.github/workflows/: build.yml  package.yml
dep/git/: CMakeLists.txt
docs/future-improvements/: 01-ptyxis-terminal.md  02-qt-windows-build.md  03-fetch-hunks-as-needed.md  04-alternative-tree-view.md  05-maximize-detail.md  06-recurse-untracked-dirs.md  07-ignore-pattern-single-commit.md
l10n/: CMakeLists.txt
pack/: CMakeLists.txt
rsrc/linux/: com.github.Murmele.Gittyup.appdata.xml.in  com.github.Murmele.Gittyup.desktop
src/app/: Application.cpp  CMakeLists.txt
src/conf/: CMakeLists.txt
src/cred/: GitCredential.cpp
src/git/: CMakeLists.txt  Diff.cpp  Diff.h  Repository.cpp
src/index/Indexer/: CMakeLists.txt
src/ui/: CommitList.cpp  MainWindow.cpp  RepoView.cpp  TreeModel.cpp
src/ui/DiffView/: DiffView.cpp
src/update/: CMakeLists.txt
src/util/: CMakeLists.txt
src/watcher/: RepositoryWatcher_linux.cpp  RepositoryWatcher_qt.cpp
test/: Diff.cpp
